--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "copy-to-clipboard": "^3.2.0",
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-syntax-highlighter": "^11.0.2",
+    "replace-once": "^1.0.0",
+    "svg-to-jsx": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
